# OS_Labs

./: .gitignore  CMakeLists.txt  README.md
lab_01/: CMakeLists.txt  launc_test.sh  main.cpp
lab_01/include/: solution.hpp
lab_01/src/: solution.cpp
lab_01/test/: tests01.txt  tests02.txt
lab_02/: lab2.cpp  launch.sh
lab_03/: launc_test.sh  main.cpp
lab_03/plan_b/lab3/: CMakeLists.txt  Makefile  child  child.c  main  main.c  test
lab_03/src/: solution.cpp
lab_04/: CMakeLists.txt  launch_tests.sh  main.cpp  solution.cpp  solution.hpp
lab_05/src/: CMakeLists.txt
